--- a/index.html
+++ b/index.html
@@ -142,39 +142,15 @@
         }
     </style>
     <script>
-        function actualizarHoraYFarmacia() {
+        function actualizarHora() {
             const ahora = new Date();
             const horas = ahora.getHours().toString().padStart(2, '0');
             const minutos = ahora.getMinutes().toString().padStart(2, '0');
             const segundos = ahora.getSeconds().toString().padStart(2, '0');
             document.getElementById('hora-actual').textContent = `${horas}:${minutos}:${segundos}`;
-
-            const dia = ahora.getDate();
-            const mes = ahora.getMonth() + 1;
-            const farmaciaHoy = obtenerFarmacia(dia, mes);
-            document.getElementById('farmacia-turno-nombre').textContent = `FARMACIA DE TURNO: ${farmaciaHoy}`;
         }
 
-        function obtenerFarmacia(dia, mes) {
-            const farmaciasSemana = ['MITRE', 'SARMIENTO', 'VAZQUEZ', 'PINTAR', 'CALPE'];
-            const farmaciasSabado = ['MITRE', 'CALPE', 'SARMIENTO', 'VAZQUEZ', 'PINTAR'];
-            const farmaciasDomingo = ['VAZQUEZ', 'PINTAR', 'MITRE', 'CALPE', 'SARMIENTO'];
-
-            let fecha = new Date(new Date().getFullYear(), mes - 1, dia);
-            let diaSemana = fecha.getDay();
-            let semanasTranscurridas = Math.floor((fecha - new Date(new Date().getFullYear(), 0, 1)) / (1000 * 60 * 60 * 24 * 7));
-
-            if (diaSemana >= 1 && diaSemana <= 5) {
-                return farmaciasSemana[diaSemana - 1];
-            } else if (diaSemana === 6) {
-                return farmaciasSabado[semanasTranscurridas % farmaciasSabado.length];
-            } else if (diaSemana === 0) {
-                return farmaciasDomingo[semanasTranscurridas % farmaciasDomingo.length];
-            }
-            return 'Desconocido';
-        }
-
-        setInterval(actualizarHoraYFarmacia, 1000);
+        setInterval(actualizarHora, 1000);
 
         function abrirUnicaVentana(nombre, url) {
             window.open(url, nombre, 'width=1000,height=700,resizable=yes,scrollbars=yes');
@@ -213,13 +189,13 @@
             printWindow.print();
         }
 
-        document.addEventListener('DOMContentLoaded', actualizarHoraYFarmacia);
+        document.addEventListener('DOMContentLoaded', actualizarHora);
     </script>
 </head>
 
 <body>
     <div class="barra-superior">
-        <span id="hora-actual"></span> - <span id="farmacia-turno-nombre"></span>
+        <span id="hora-actual"></span>
     </div>
     <div class="content">
         <h1>FARMACIA PINTAR</h1>
